# foliolib

./: .gitignore  .readthedocs.yml  MANIFEST.in  README.md  README.rst  __create_release  convert_install_file.py  foliocli  foliolibapi  foliolibcli  make_api.py  make_clean.sh  make_clean_doc.sh  make_doc.sh  okapicli  requirements.txt  setup.cfg  setup.py
debian/: changelog  control  copyright  foliolib_complete.sh  python-foliolib-doc.doc-base  python3-foliolib.install  rules  watch
descriptors_templates/: ModuleDescriptor-mod-agreements.json  ModuleDescriptor-mod-graphql.json  ModuleDescriptor-mod-licenses.json
docs/: make_folioapi_rst.py  requirements.in  requirements.txt
docs/source/: apiexamples.rst  cliref.rst  conf.py  confref.rst  documentation.rst  examples.rst  foliolib.config.Config.rst  foliolib.config.rst  foliolib.config.server.rst  foliolib.folio.api.rst  foliolib.folio.rst  foliolib.helper.rst  foliolib.okapi.rst  index.rst  kubernetes.rst  modules.rst  pyokapi.config.Config.rst  pyokapi.config.rst  pyokapi.folio.api.rst  pyokapi.folio.rst  pyokapi.okapi.rst  singleserver.rst
extras/: okapi.yaml
extras/okapi-docker/: Dockerfile  README.md  create_kube_config.sh  hazelcast.xml.tpl  startup.sh
foliolib/: __init__.py  __version__.py  basecli.py  config.py  exceptions.py  foliocli.py  okapicli.py
foliolib/apiBuilder/: __init__.py  cli.py
foliolib/cli/: __init__.py  confirm.py  err_cli.py  folio.py  main.py  main_err.py  main_noauth.py  module.py  okapi.py  orderedGroup.py  platform.py  server.py  tenant.py
foliolib/folio/: __init__.py  config.py  configImpl.py  dataImport.py  exceptions.py  helper.py  inventory.py  inventoryImpl.py  inventoryReferenceData.py  permissionsImpl.py  users.py  usersImpl.py
foliolib/helper/: __init__.py  database.py  folio.py  modules.py  okapi.py  platform.py  tenant.py
foliolib/okapi/: __init__.py  database.py  exceptions.py  helper.py  kubeClient.py  misc.py  okapiClient.py  okapiModule.py  okapiModuleKubernetes.py
foliolib/raml/: __init__.py  codeBuilder.py  exceptions.py  helper.py  ramlMethod.py  ramlUrl.py  tpl.py
okapi/: __init__.py  basecli.py  config.py  database.py  exceptions.py  helper.py  installer.py  okapiClient.py  okapiModule.py  okapicli.py
okapi/folio/: __init__.py  foliocli.py  helper.py  inventory.py  (+3 more)
pyokapi/: __init__.py  __version__.py  basecli.py  config.py  foliocli.py  okapicli.py
(+2283 files in other folders)
