[metadata]
name = foliolib
url = https://github.com/tobi-weber/foliolib
description = Okapi/Folio Manager and Library
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Tobias Weber
author_email = tobi-weber@gmx.de
license = GPL-3.0 License
version = attr: foliolib.__version__.__version__
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: GPL-3.0 License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
python_requires = ">=3.6"

[options]
packages =
    foliolib
    foliolib/okapi
    foliolib/folio
    foliolib/folio/api
install_requires =
    PyYAML>=5.3.1
    inflection>=0.3.1
    psycopg2>=2.8.5
    python_magic>=0.4.16
    requests>=2.24.0
    PyGithub>=1.43.7
    lxml>=4.6.1
scripts = 
    okapicli
    foliocli
setup_requires =
  setuptools
    