[metadata]
name = foliolib
url = https://github.com/tobi-weber/foliolib
description = Okapi/Folio Manager and Library
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Tobias Weber
author_email = tobi-weber@gmx.de
license = GPL-3.0 License
version = attr: foliolib.__version__.__version__
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
python_requires = ">=3.6"

[options]
packages =
    foliolib
    foliolib/cli
    foliolib/cli/folio
    foliolib/folio
    foliolib/folio/api
    foliolib/helper
    foliolib/okapi
    foliolib/apiBuilder
install_requires =
    PyYAML>=5.3.1
    inflection>=0.3.1
    #psycopg2>=2.8.5
    python_magic>=0.4.16
    requests>=2.24.0
    lxml>=4.6.1
    click>=8.1.3
    tabulate>=0.8.9
    kubernetes>=22.6.0
setup_requires =
  setuptools

[options.entry_points]
console_scripts =
    foliolib = foliolib.cli:cli
    
